@@ -21,7 +21,7 @@
 
 \date{June 11, 2003}       % update before release!
 
-\release{0.5a2}   % release version; this is used to define the
+\release{0.5a3}   % release version; this is used to define the
                   % \version macro
 
 %\makeindex          % tell \index to actually write the .idx file
