@@ -4,6 +4,12 @@ app = naming.LinkRef(
       )
 
 [version-tool.partKinds]
+digit     = "peak.running.tools.version.config.Digit"
+choice    = "peak.running.tools.version.config.Choice"
+timestamp = "peak.running.tools.version.config.Timestamp"
 
 [version-tool.formatKinds]
-
+string    = "peak.running.tools.version.config.StringFormat"
+optional  = "peak.running.tools.version.config.Optional"
+remap     = "peak.running.tools.version.config.Remap"
+date      = "peak.running.tools.version.config.DateFormat"
