@@ -2,6 +2,6 @@
 status = 'alpha'
 date = 1061247418.34
 major = 0
-build = 2
+build = 3
 minor = 5
 
